--- a/Project Calculator/style.css
+++ b/Project Calculator/style.css
@@ -17,7 +17,7 @@ input{
     left: auto;
     top: auto;
     border: 0;
-    color: #495069;
+    color: #111f4f;
     background-color: 4px;
     width: 350px;
     height: 50px;
@@ -25,14 +25,14 @@ input{
     margin: 5px;
     font-size: 30px;
     box-shadow: 0 4px rgba(0, 0, 0, 0.2);
-    border: 3px solid #495069;
+    border: 3px solid #1a2652;
     border-radius: 3px;
 
 }
 
 table{
     margin: auto;
-    background-color: #b8e1f5;
+    background-color: #131a3b;
     width: 285px;
     height: 330px;
     text-align: start;
@@ -44,7 +44,7 @@ button{
     font-size: 30px;
     width: 80px;
     height: 50px;
-    background-color: rgb(237, 220, 223);
+    background-color: rgb(151, 184, 237);
     color:black;
     border-radius: 2px;
     
